// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/SaveButton should match snapshot, extraClasses 1`] = `
<button
  className="save-button btn btn-primary some-class"
  disabled={false}
  id="saveSetting"
  type="submit"
>
  Save
</button>
`;

exports[`components/SaveButton should match snapshot, on defaultMessage 1`] = `
<button
  className="save-button btn btn-primary"
  disabled={false}
  id="saveSetting"
  type="submit"
>
  Save
</button>
`;

exports[`components/SaveButton should match snapshot, on savingMessage 1`] = `
<button
  className="save-button btn btn-primary"
  disabled={true}
  id="saveSetting"
  type="submit"
>
  <span>
    <span
      className="fa fa-refresh icon--rotate"
      title="Loading Icon"
    />
    Saving
  </span>
</button>
`;
